# MAXIMADagsterModules

./: .env.example  .gitignore  AbsorptionCorrection.py  AzimuthalIntegrator.py  ConverterXRFtoMCA.py  DAG_Lattice_Parameter_Node  Dockerfile  Inputs.py  MCAtoFit.py  README.md  calibrate.py  concentrations.py  docker-compose.yml  pyproject.toml  workspace.yaml
.dg/: telemetry.yaml
.github/workflows/: ci.yaml
MAXIMADAGDocs/source/: conf.py
docs/source/: AzimuthalIntegrator.rst  MCAtoFit.rst  architecture.rst  concentrations.rst  conf.py  configuration.rst  dagster_runtime.rst  data_products.rst  discovery_backend.rst  getting_started.rst  index.rst  modules.rst  troubleshooting.rst
docs/source/api/: processing_modules.rst  runtime_orchestration.rst  runtime_utilities.rst
src/MaximaDagster/: assets.py  config.py  definitions.py  girder_helpers.py  io_manager.py  patterns.py  resources.py  results_publisher.py  sensors.py
src/MaximaDagster/defs/: assets.py
tests/: test_absorption_correction.py  test_active_poni_coordination.py  test_assets_helpers.py  test_azimuthal_integrator.py  test_calibrate.py  test_concentrations.py  test_converter_xrf_to_mca.py  test_coverage_enforcement.py  test_discovery_datafiles.py  test_inputs.py  test_lattice_parameter_node.py  test_mca_to_fit.py  test_poni_coordination.py  test_poni_manager.py  test_resources.py  test_results_publisher.py  test_sensor_datafiles_backend.py  test_sensor_experiment_detection.py  test_sensor_job_integration.py  test_xrd_igsn_metadata.py  test_xrd_pipeline_metadata.py
(+13 files in other folders)
